--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,24 +1,23 @@
 InterPro_ID: null
-KEGG_ID:
-- 3.1.1.3
+KEGG_ID: null
 alignment_method: upimapi
 concat_models: true
 consensus: false
 database: UniProt
 expansion: false
-hmm_database_name: ec3113
+hmm_database_name: PBAT_manual
 hmm_validation: false
 hmmsearch_out_type: tsv
-input_file: null
+input_file: Aspergillus_5052.fasta
 input_file_db_const: null
-input_type: null
-metagenomic: true
+input_type: protein
+metagenomic: false
 msa_aligner: tcoffee
-out_table_format: tsv
-output_directory: MPARTY_results
-overwrite: true
-seqids: []
+out_table_format: excel
+output_directory: Aspergillus_out_manual
+overwrite: false
+seqids: too_big
 threads: 12
 thresholds: false
 verbose: true
-workflow: database_construction
+workflow: annotation
