--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,33 @@ jobs:
           name: mparty
           path: /tmp/mparty.tar
 
+  version:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Download artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: mparty
+          path: /tmp
+
+      - name: Load Docker image
+        run: |
+          docker load --input /tmp/mparty.tar
+          docker image ls -a
+
+      - name: Check base entrypoint
+        run: docker run mparty bin/bash -c "ls"
+
+      - name: Print main script contents
+        run: docker run mparty bin/bash -c "cat m-party.py"
+      
+      - name: Check m-party version
+      run: docker run mparty bin/bash -c "m-party --version"
+
   annotation:
     runs-on: ubuntu-latest
     needs: build
