[TEST] keep testing actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,6 +54,9 @@ jobs:
 
       - name: Check base entrypoint
         run: docker run mparty bin/bash -c "ls"
+
+      - name: Print main script contents
+        run: docker run mparty bin/bash -c "cat /opt/conda/bin/m-party.py"
       
       - name: Check m-party version
         run: docker run mparty bin/bash -c "m-party.py --version"
