--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: mparty
+          name: mparty-${{ github.ref_name }}
           path: /tmp/mparty.tar
 
   version:
@@ -47,7 +47,7 @@ jobs:
       - name: Download artifact
         uses: actions/download-artifact@v4
         with:
-          name: mparty
+          name: mparty-${{ github.ref_name }}
           path: /tmp
 
       - name: Load Docker image
