--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,8 +14,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+      - name: Checkout Code
+        uses: actions/checkout@v3
         with:
           ref: ${{ github.ref }}
 
@@ -74,7 +74,7 @@ jobs:
       - name: Download artifact
         uses: actions/download-artifact@v4
         with:
-          name: mparty
+          name: mparty-${{ github.ref_name }}
           path: /tmp
 
       - name: Load Docker image
@@ -191,7 +191,7 @@ jobs:
       - name: Download artifact
         uses: actions/download-artifact@v4
         with:
-          name: mparty
+          name: mparty-${{ github.ref_name }}
           path: /tmp
 
       - name: Load Docker image
