--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,23 +1,24 @@
 InterPro_ID: null
-KEGG_ID: null
+KEGG_ID:
+- K21104
 alignment_method: upimapi
 concat_models: true
 consensus: false
 database: UniProt
 expansion: false
-hmm_database_name: PBAT_manual
+hmm_database_name: PET_hydrolase
 hmm_validation: false
 hmmsearch_out_type: tsv
-input_file: Aspergillus_5052.fasta
+input_file: null
 input_file_db_const: null
-input_type: protein
+input_type: null
 metagenomic: false
 msa_aligner: tcoffee
-out_table_format: excel
-output_directory: Aspergillus_out_manual
+out_table_format: tsv
+output_directory: MPARTY_results
 overwrite: false
-seqids: too_big
-threads: 12
+seqids: []
+threads: 16
 thresholds: false
 verbose: true
-workflow: annotation
+workflow: database_construction
