--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -219,3 +219,30 @@ jobs:
 
       - name: Database construction workflowfor with InterPro individual protein IDs
         run: docker run mparty bin/bash -c "m-party.py -w database_construction --hmm_db_name test_KEGG_Prots --interpro A0A000 A0A001 A0A002 --verbose"
+
+  clean:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Download artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: mparty-${{ github.ref_name }}
+          path: /tmp
+
+      - name: Load Docker image
+        run: |
+          docker load --input /tmp/mparty.tar
+          docker image ls -a
+
+      - name: Simpler database construction pipeline
+        run: docker run mparty bin/bash -c "m-party.py -w database_construction --kegg K21104 --hmm_db_name PET_hydrolase"
+      
+      - name: Check error raise for clean data
+        run: docker run mparty bin/bash -c "m-party.py --clean"
+
+      - name: Clean data
+        run: docker run mparty bin/bash -c "m-party.py --clean --hmm_db_name PET_hydrolase"
