--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,10 +16,7 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
-        with:
-          ref: ${{ github.ref }}
-
-
+      
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -29,12 +26,13 @@ jobs:
           context: .
           file: ./Dockerfile
           tags: mparty:latest
+          build-args: GIT_BRANCH=${{ github.ref_name }}  # Pass branch name dynamically
           outputs: type=docker, dest=/tmp/mparty.tar
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: mparty-${{ github.ref_name }}
+          name: mparty
           path: /tmp/mparty.tar
 
   version:
@@ -47,7 +45,7 @@ jobs:
       - name: Download artifact
         uses: actions/download-artifact@v4
         with:
-          name: mparty-${{ github.ref_name }}
+          name: mparty
           path: /tmp
 
       - name: Load Docker image
@@ -74,7 +72,7 @@ jobs:
       - name: Download artifact
         uses: actions/download-artifact@v4
         with:
-          name: mparty-${{ github.ref_name }}
+          name: mparty
           path: /tmp
 
       - name: Load Docker image
@@ -191,7 +189,7 @@ jobs:
       - name: Download artifact
         uses: actions/download-artifact@v4
         with:
-          name: mparty-${{ github.ref_name }}
+          name: mparty
           path: /tmp
 
       - name: Load Docker image
@@ -230,7 +228,7 @@ jobs:
       - name: Download artifact
         uses: actions/download-artifact@v4
         with:
-          name: mparty-${{ github.ref_name }}
+          name: mparty
           path: /tmp
 
       - name: Load Docker image
