Whole M-PARTY refactoring and optimization(#3)
* Start complete code refactoring

* variable names correction; remove commented code; reduce CC

* Refactor the parse_fasta function; changed the way that the arguments are read into the config file

* CLI arguments declaration now have its own file, to improve main script readability

* [REFACTOR] start table and text report functions refactoring

* [REFACTOR] clean except clauses; remove useless code; rewrite config writing and reading

* [REFACTOR] Start cleaning all the mess from the pathing

* [REFACTOR] Move text report text writing to its own file

* [FIX] Further cleaning and small bug fix

* [REFACTOR] The goal here is to save the variables used by the text as they are made available throughout the pipeline

* Text cleaning and code refactor

* Added docs; removed commented code

* [REFACTOR] Start rearranging the way pathing is done, dirs are created and removed

* [REMOVE] commented code

* [UPDATE] gitignore

* [UPDATE] gitignore for mparty results folders

* [REFACTOR] major changes to main pipeline and side util funcs

* [REFACTOR] more changes

* [UPDATE] github actions

* [FIX] artifact version

* [REFACTOR] start to change args checks to its single function

* [REFACTOR] major changes to the database construction workflow part of the pipeline

* [REFACTOR] condense database construction pipeline

* [TEST] quick update to test m-party CI version

* [DOCS] a lit bit of documentation

* [FIX] quick fix

* fix actions

* another fix

* [TEST] keep testing actions

* [ADD] disable to tqdm when verbose is False

* [FIX] fiinal try

* [FIX] another try to checkout to refactor

* ahhhhhh

* try checkout in dockefile

* another one

* [FIX] possible module names clash

* try to see the probem with the modules import

* hello

* [FIX] modules pathing

* [ADD] job for data cleaning

* debug actions

* [FIX] config folder not present

--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,15 @@ resources/Alignments/PE/BLAST/upimapi_results/*.blast
 **/__pycache__
 
 # snakemake logs #
+############
 logs/**
 */.snakemake/log/
 .snakemake
 .snakemake/**
+
+# results #
+############
+/results/
+/output*/
+/test_*/
+*.dnd
